# webterm

./: .gitignore  LICENSE  README.md  pyproject.toml
webterm/: __init__.py  app.py  session_manager.py  ssh_handler.py  telnet_handler.py
webterm/static/css/: style.css
webterm/static/js/: app.js
webterm/templates/: index.html
