[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webterm"
version = "1.0.0"
description = "Web-based SSH & Telnet client with a modern terminal UI — like XShell in your browser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mimonimo", email = "mimonimo@users.noreply.github.com" },
]
keywords = [
    "ssh",
    "telnet",
    "terminal",
    "web-terminal",
    "xterm",
    "websocket",
    "remote-access",
    "devops",
    "sysadmin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "paramiko>=3.4",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/mimonimo/webterm"
Repository = "https://github.com/mimonimo/webterm"
Issues = "https://github.com/mimonimo/webterm/issues"

[project.scripts]
webterm = "webterm.app:main"

[tool.hatch.build.targets.wheel]
packages = ["webterm"]
